@@ -31,7 +31,7 @@ To build Grails, clone this GitHub repository and execute the install Gradle tar
 
 If you encounter out of memory errors when trying to run the install target, try adjusting Gradle build settings. For example:
 
-    export GRADLE_OPTS="-Xmx2G -Xms2G -XX:NewSize=512m -XX:MaxNewSize=512m -XX:MaxPermSize=1G"
+    export GRADLE_OPTS="-Xmx2G -Xms2G -XX:NewSize=512m -XX:MaxNewSize=512m"
 
 Performing a Release
 ---
